--- a/src/SenseNet.Logging.PerformanceCounters/SenseNet.Logging.PerformanceCounters.csproj
+++ b/src/SenseNet.Logging.PerformanceCounters/SenseNet.Logging.PerformanceCounters.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SenseNet.Services" Version="7.5.1" />
     <PackageReference Include="SenseNet.Tools" Version="3.1.0" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.5.0" />
   </ItemGroup>
